--- a/uzmolkom/app/sass/blocks/contacts.sass
+++ b/uzmolkom/app/sass/blocks/contacts.sass
@@ -45,8 +45,15 @@
         flex-wrap: wrap
         gap: 30px
         justify-content: space-between
+        margin-bottom: 25px
         @media (max-width: 767px)
             gap: 10px
+            margin-bottom: 20px
+    &__callback
+        @media (max-width: 767px)
+            width: 100%
+            text-align: center
+        
     &__item
         @media (max-width: 767px)
             width: 100%
