--- a/uzmolkom/app/sass/blocks/footer.sass
+++ b/uzmolkom/app/sass/blocks/footer.sass
@@ -37,3 +37,19 @@
         margin-bottom: 30px
         @media (max-width: 767px)
             margin-bottom: 40px
+    &__scroll-to-top
+        position: absolute
+        top: -50px
+        left: 0
+        width: 50px
+        height: 50px
+        cursor: pointer
+        background-image: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='50' y='50' width='50' height='50' rx='10' transform='rotate(180 50 50)' fill='%23A5F018'/%3E%3Cpath d='M26.0607 11.4393C25.4749 10.8536 24.5251 10.8536 23.9393 11.4393L14.3934 20.9853C13.8076 21.5711 13.8076 22.5208 14.3934 23.1066C14.9792 23.6924 15.9289 23.6924 16.5147 23.1066L25 14.6213L33.4853 23.1066C34.0711 23.6924 35.0208 23.6924 35.6066 23.1066C36.1924 22.5208 36.1924 21.5711 35.6066 20.9853L26.0607 11.4393ZM26.5 37.5V12.5H23.5V37.5H26.5Z' fill='white'/%3E%3C/svg%3E%0A")
+        background-size: contain
+        @media (max-width: 1023px)
+            width: 36px
+            height: 36px
+            top: -36px
+            left: initial
+            right: 0
+            
