--- a/uzmolkom/app/sass/blocks/callback-block.sass
+++ b/uzmolkom/app/sass/blocks/callback-block.sass
@@ -15,6 +15,31 @@
         gap: 15px
         justify-content: space-between
         align-items: flex-start
+        &::before
+            content: ''
+            width: 50%
+            height: 100%
+            opacity: .1
+            position: absolute
+            top: 0
+            left: 50%
+            transform: translateX(-50%)
+            border-right: 1px solid #fff
+            border-left: 1px solid #fff
+            @media (max-width: 1023px)
+                content: none
+        &::after
+            content: ''
+            width: 1px
+            height: 100%
+            opacity: .1
+            position: absolute
+            top: 0
+            left: 50%
+            transform: translateX(-50%)
+            background: #fff
+            @media (max-width: 1023px)
+                content: none
         @media (max-width: 1023px)
             flex-direction: column
             align-items: center
