--- a/uzmolkom/app/sass/main.sass
+++ b/uzmolkom/app/sass/main.sass
@@ -8,6 +8,22 @@ body
     line-height: 120%
     background: #fff
 
+ul
+    padding: 0
+    margin: 15px 0 0
+    li
+        margin-bottom: 15px
+        list-style: none
+        padding-left: 17px
+        position: relative
+        &::before
+            content: ''
+            width: 12px
+            height: 12px
+            background-image: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6.5' r='6' fill='%23324773'/%3E%3Ccircle cx='5.99996' cy='6.4999' r='3.6' fill='white'/%3E%3C/svg%3E%0A")
+            position: absolute
+            top: 6.5px
+            left: 0
 .flow
     width: 100vw
     overflow-x: hidden
@@ -108,6 +124,11 @@ body
     font-size: 28px
     font-weight: 500
     line-height: 140%
+    &--white
+        color: #fff
+        .counter__total
+            color: #fff
+
     &__total
         color: #9C9C9C
 
@@ -117,6 +138,10 @@ body
     height: 2px
     background: #D9D9D9
     position: relative
+    &--white
+        background: #AEAEAE
+        .progress__line
+            background: #fff
     &__line
         position: absolute
         top: 0
@@ -136,6 +161,8 @@ body
         position: absolute
         bottom: 0
         left: 0
+
+
 @import blocks/arrows
 @import blocks/socials
 @import blocks/menu
@@ -144,6 +171,8 @@ body
 @import blocks/contact
 @import blocks/header
 @import blocks/first-screen
+@import blocks/circular-block
+@import blocks/tabs
 @import blocks/subscribe
 @import blocks/for-whom
 @import blocks/banner
