--- a/uzmolkom/app/sass/blocks/callback-form.sass
+++ b/uzmolkom/app/sass/blocks/callback-form.sass
@@ -3,6 +3,7 @@
     background: #fff
     max-width: 550px
     text-align: center
+    z-index: 1
     @media (max-width: 767px)
         padding: 30px 15px
     &__title
