--- a/uzmolkom/app/sass/blocks/contacts.sass
+++ b/uzmolkom/app/sass/blocks/contacts.sass
@@ -2,6 +2,9 @@
     margin: 180px 0 110px
     @media (max-width: 1023px)
         margin: 80px 0 50px 
+    &--gray
+        .contacts__inner
+            background: #F9FBFB
     &__top
         display: flex
         align-items: center
