--- a/uzmolkom/app/sass/blocks/categories-list.sass
+++ b/uzmolkom/app/sass/blocks/categories-list.sass
@@ -1,16 +1,22 @@
 .categories-list
     display: flex
     gap: 25px
+    &--column
+        flex-direction: column
+        gap: 15px
     &__item
         padding: 12.5px 20px
         color: #324773
         font-size: 18px
         line-height: 25px
-        border: 1px solid #324773
+        border: 2px solid #324773
         transition: all .15s ease-in
         cursor: pointer
+        font-size: 16px
+        font-weight: 600
+        text-align: center
         &:hover,
         &.-active
             background: #324773
             color: #fff
-            border: 1px solid #324773
+            border: 2px solid #324773
