--- a/uzmolkom/app/sass/main.sass
+++ b/uzmolkom/app/sass/main.sass
@@ -30,6 +30,11 @@ h1
     font-weight: 600
     line-height: 58px
     margin-bottom: 30px
+.big-title
+    font-size: 64px
+    font-weight: 600
+    line-height: 76.8px
+    text-transform: uppercase
 p
     font-weight: 500
     line-height: 27px
@@ -150,8 +155,6 @@ p
 
     &__total
         color: #9C9C9C
-
-
 .progress
     width: 100%
     height: 2px
@@ -199,11 +202,23 @@ p
 @import blocks/for-whom
 @import blocks/banner
 @import blocks/services
-@import blocks/projects
+@import blocks/projects-block
 @import blocks/item
 @import blocks/list
 @import blocks/categories-list
 @import blocks/sort
+@import blocks/projects
+@import blocks/project
+@import blocks/info-slider
+@import blocks/steps-slider
+@import blocks/results
+@import blocks/main-banner
+@import blocks/cards
+@import blocks/checkers
+@import blocks/tags
+@import blocks/list-wide
+@import blocks/item-wide
+@import blocks/info
 @import blocks/pagination
 @import blocks/detail
 @import blocks/block-with-image
