--- a/uzmolkom/app/sass/blocks/contacts-info.sass
+++ b/uzmolkom/app/sass/blocks/contacts-info.sass
@@ -12,10 +12,23 @@
         width: 57%
         padding: 70px 100px 85px
         background: #3247731a
+    &__sub-title
+        font-size: 20px
+        font-weight: 600
+        line-height: 24px
+        color: #324773
+        margin-bottom: 20px
     &__title
         font-size: 40px
         font-weight: 600
         line-height: 48px
+        margin-bottom: 60px
+    &__text
+        font-size: 24px
+        font-weight: 400
+        line-height: 28.8px
+        color: #324773
+        margin-top: -20px
         margin-bottom: 60px
     &__block
         max-width: 816px
@@ -33,3 +46,5 @@
             line-height: 27px
             margin-bottom: 30px
         &-btn
+    &__rhombus-list
+        margin-bottom: 30px
