--- a/uzmolkom/app/sass/main.sass
+++ b/uzmolkom/app/sass/main.sass
@@ -25,6 +25,15 @@ ul
             position: absolute
             top: 6.5px
             left: 0
+.ul-simple
+    li
+        margin-bottom: 10px
+        &::before
+            width: 4px
+            height: 4px
+            border-radius: 50%
+            background: #181818
+            top: 8px
 h1
     font-size: 48px
     font-weight: 600
@@ -184,7 +193,6 @@ p
         bottom: 0
         left: 0
 
-
 @import blocks/arrows
 @import blocks/socials
 @import blocks/menu
@@ -197,6 +205,8 @@ p
 @import blocks/first-screen
 @import blocks/circular-block
 @import blocks/tabs
+@import blocks/tabs-second
+@import blocks/products-slider
 @import blocks/subscribe
 @import blocks/subscribe-2
 @import blocks/for-whom
@@ -213,6 +223,15 @@ p
 @import blocks/steps-slider
 @import blocks/results
 @import blocks/main-banner
+@import blocks/catalog-section
+@import blocks/catalog-list
+@import blocks/image-lines
+@import blocks/principles
+@import blocks/history
+@import blocks/team-slider
+@import blocks/rhombus-list
+@import blocks/banners-slider
+@import blocks/product-item
 @import blocks/cards
 @import blocks/checkers
 @import blocks/tags
@@ -225,7 +244,9 @@ p
 @import blocks/contacts-info
 @import blocks/blog
 @import blocks/callback-block
+@import blocks/callback-block-second
 @import blocks/callback-form
+@import blocks/callback-form-second
 @import blocks/contacts
 @import blocks/brands
 @import blocks/footer
