--- a/uzmolkom/app/sass/blocks/callback-form.sass
+++ b/uzmolkom/app/sass/blocks/callback-form.sass
@@ -4,6 +4,8 @@
     max-width: 550px
     text-align: center
     z-index: 1
+    &--gray
+        background: #EBEDF1
     @media (max-width: 767px)
         padding: 30px 15px
     &__title
