--- a/uzmolkom/app/sass/blocks/history.sass
+++ b/uzmolkom/app/sass/blocks/history.sass
@@ -69,6 +69,17 @@
                 li
                     &::before
                         background: #6A6A6A
+        &-utp
+            padding: 30px 35px
+            background: #EBEDF1  
+            display: flex
+            gap: 50px
+            margin-bottom: 40px
+            &-item
+                max-width: 230px
+                &-icon
+                    margin-bottom: 20px
+                &-title
     &__arrows
         position: absolute
         top: 40px
