--- a/uzmolkom/app/sass/blocks/image-lines.sass
+++ b/uzmolkom/app/sass/blocks/image-lines.sass
@@ -1,5 +1,9 @@
 .image-lines
     position: relative
+    &--border
+        padding-bottom: 40px
+        margin-bottom: 60px
+        border-bottom: 1px solid #ccc
     &::before,
     &::after,
     &__line
