--- a/uzmolkom/app/sass/blocks/top.sass
+++ b/uzmolkom/app/sass/blocks/top.sass
@@ -5,9 +5,16 @@
     padding-bottom: 30px
     margin-bottom: 30px
     border-bottom: 1px solid #CCCCCC
+    &--no-border
+        border-bottom: 0
+        margin-bottom: 40px
+        padding-bottom: 0
     &__content
         max-width: 940px
     &__heading
+        margin: 0 0 20px
+        &--uppercase
+            text-transform: uppercase
     &__description
         font-weight: 500
         line-height: 27px
