--- a/uzmolkom/app/sass/blocks/rhombus-list.sass
+++ b/uzmolkom/app/sass/blocks/rhombus-list.sass
@@ -10,8 +10,9 @@
             font-size: 24px
             font-weight: 600
             line-height: 28.8px
-            margin-bottom: 15px
             position: relative
+            &--400 
+                font-weight: 400
             &::before
                 content: ''
                 width: 16px
@@ -21,7 +22,15 @@
                 top: 5px
                 left: 0
         &-text
+            margin-top: 15px
             font-size: 18px
             font-weight: 500
             line-height: 27px
             margin-bottom: 15px
+    &--no-border
+        gap: 20px
+        .rhombus-list__item
+            border-bottom: none
+        .rhombus-list__item-text
+            margin-bottom: 0
+
