--- a/uzmolkom/app/sass/main.sass
+++ b/uzmolkom/app/sass/main.sass
@@ -34,6 +34,33 @@ ul
             border-radius: 50%
             background: #181818
             top: 8px
+table
+    width: 100%
+    tr
+        &:nth-child(odd)
+            td
+                background: #EBEDF1
+    th
+        background: #324773
+        padding: 20px 30px
+        font-size: 24px
+        font-weight: 600
+        line-height: 28.8px
+        color: #fff
+        text-align: left
+        border-right: 20px solid #fff
+        border-bottom: 5px solid #fff
+        &:last-child
+            border-right: none
+    td
+        padding: 20px 30px
+        font-size: 20px
+        font-weight: 400
+        line-height: 24px
+        border-right: 20px solid #fff
+        border-bottom: 5px solid #fff
+        &:last-child
+            border-right: none
 h1
     font-size: 48px
     font-weight: 600
@@ -192,7 +219,17 @@ p
         position: absolute
         bottom: 0
         left: 0
-
+.img-responsive
+    width: 100%
+    height: auto
+.mt-l
+    margin-top: 180px !important
+.mb-l
+    margin-bottom: 180px !important
+.mt-m
+    margin-top: 90px !important
+.mb-m
+    margin-bottom: 90px !important
 @import blocks/arrows
 @import blocks/socials
 @import blocks/menu
@@ -249,4 +286,11 @@ p
 @import blocks/callback-form-second
 @import blocks/contacts
 @import blocks/brands
+@import blocks/brands-detail
+@import blocks/utp
+@import blocks/slider
+@import blocks/advices
+@import blocks/product
+@import blocks/callback-block-third
+@import blocks/callback-form-thidh
 @import blocks/footer
